# rust-trading-engine

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docs/: Trading Engine.postman_collection.json
jsons/: orderbook.json  orders.json  trades.json
src/: main.rs
src/file_io/: mod.rs
src/orders/: mod.rs
src/routes/: mod.rs  orders_service.rs  trades_service.rs
src/trading_engine/: matching_engine.rs  mod.rs  orderbook.rs
src/worker/: mod.rs
src/ws/: mod.rs
