[package]
name = "rust-trading-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
env_logger = "0.11.8"
rust_decimal = {version = "1.37.1", features = ["serde-with-str"]}
serde = {version = "1.0.219", features = ["derive"]}
serde-aux = "4.6.0"
serde_json = "1.0.140"
tokio = "1.44.2"
